--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,visualstudiocode,java
+
+# All auxiliary files created nt-* (not track)
+nt-*
